2014-06-09  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Rest_Dumps.pl,
	  installcheck/Amanda_Rest_Storages.pl: Typos.

2014-06-09  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Rest_Storages.pl,
	  installcheck/Amanda_Rest_Dumps.pl: Add files.

2014-06-06  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Rest_Dumps.pl: Check the Dumps endpoint
	* installcheck/Amanda_Rest_Storages.pl: Check the Storages endpoint
	* installcheck/Installcheck/Config.pm: Add policy and storage.
	* installcheck/Makefile.am: Add Amanda_Rest_Dumps and
	  Amanda_Rest_Storages.
	* perl/Amanda/Changer.pm, perl/Amanda/Changer/diskflat.pm,
	  perl/Amanda/Storage.pm: Change many Amanda::Changer::Error to be
	  Amanda::Message compliant.
	* perl/Amanda/Rest/Storages.pm: Pass the tapelist to the storage.

2014-06-05  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amfetchdump.pl: Pass the tapelist to the Storage.

2014-06-04  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Report.pm: Fix exit_status.
	* installcheck/Amanda_Report.pl: Add check for exit_status.
	* installcheck/amreport.pl: Fix exit_status check.

2014-06-02  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Rest_Configs.pl: Fix line number.

2014-06-02  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Rest_Configs.pl: Fix.
	* perl/Amanda/Rest/Configs.pm: Fix perl warning.
	* perl/Amanda/Rest/Labels.pm: Fix perl warning.

2014-06-02  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amgtar.c: Add 'directory is on a different
	  filesystem; not dumped' as a normal message.

2014-05-30  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Rest/Amanda/bin/app.pl.in:
	  Remove 'use Data::Structure::Util'.

2014-05-30  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/gnutar.pl: Fix for SunOS
	* perl/Amanda/Interactivity.pm: Do not die if ->new return  undef.