@@ -100,7 +100,7 @@ is_deeply ($reply,
                                           'client_crc' => '00000000:0',
                                           'kb' => 256,
                                           'native_crc' => '00000000:0',
-                                          'holding_file' => '/tmp/amanda/installchecks/holding/20080414144444/otherbox._lib',
+                                          'holding_file' => "$Installcheck::TMP/holding/20080414144444/otherbox._lib",
                                           'sec' => 0,
                                           'orig_kb' => 0,
                                           'server_crc' => '00000000:0',
@@ -132,7 +132,7 @@ is_deeply ($reply,
                                           'client_crc' => '00000000:0',
                                           'kb' => 1298,
                                           'native_crc' => '00000000:0',
-                                          'holding_file' => '/tmp/amanda/installchecks/holding/20080414144444/oldbox._opt',
+                                          'holding_file' => "$Installcheck::TMP/holding/20080414144444/oldbox._opt",
                                           'sec' => 0,
                                           'orig_kb' => 0,
                                           'server_crc' => '00000000:0',
@@ -180,7 +180,7 @@ is_deeply ($reply,
                                           'client_crc' => '00000000:0',
                                           'kb' => 256,
                                           'native_crc' => '00000000:0',
-                                          'holding_file' => '/tmp/amanda/installchecks/holding/20080414144444/otherbox._lib',
+                                          'holding_file' => "$Installcheck::TMP/holding/20080414144444/otherbox._lib",
                                           'sec' => 0,
                                           'orig_kb' => 0,
                                           'server_crc' => '00000000:0',
@@ -228,7 +228,7 @@ is_deeply ($reply,
                                           'client_crc' => '00000000:0',
                                           'kb' => 256,
                                           'native_crc' => '00000000:0',
-                                          'holding_file' => '/tmp/amanda/installchecks/holding/20080414144444/otherbox._lib',
+                                          'holding_file' => "$Installcheck::TMP/holding/20080414144444/otherbox._lib",
                                           'sec' => 0,
                                           'orig_kb' => 0,
                                           'server_crc' => '00000000:0',
