@@ -1,4 +1,7 @@
 2014-06-09  Jean-Louis Martineau <martineau@zmanda.com>
+	* installcheck/Amanda_Rest_Dumps.pl: More typos.
+
+2014-06-09  Jean-Louis Martineau <martineau@zmanda.com>
 	* installcheck/Amanda_Rest_Dumps.pl,
 	  installcheck/Amanda_Rest_Storages.pl: Typos.
 
